chore: hw1 ready to send

--- a/lab1/homework-1-vacuum-cleaner.ipynb
+++ b/lab1/homework-1-vacuum-cleaner.ipynb
@@ -93,7 +93,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{(0, 0): 'Dirty', (1, 0): 'Dirty'}"
+      "text/plain": "{(0, 0): 'Clean', (1, 0): 'Dirty'}"
      },
      "execution_count": 4,
      "metadata": {},
@@ -174,7 +174,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Agent> perceives ((0, 0), 'Dirty') and does Suck\n",
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
       "<Agent> perceives ((1, 0), 'Dirty') and does Suck\n",
       "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
@@ -183,7 +182,8 @@
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
       "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
-      "<Agent> perceives ((1, 0), 'Clean') and does Left\n"
+      "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
+      "<Agent> perceives ((0, 0), 'Clean') and does Right\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "12"
+      "text/plain": "1"
      },
      "execution_count": 9,
      "metadata": {},
@@ -218,7 +218,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, -38.78),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 9.2)]"
+      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, -39.352),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 8.68)]"
      },
      "execution_count": 10,
      "metadata": {},
@@ -297,7 +297,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, 13.052),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 33.5)]"
+      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, 12.029),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 32.99)]"
      },
      "execution_count": 12,
      "metadata": {},
@@ -322,7 +322,7 @@
     "\n",
     "Napisz program agenta, który będzie (średnio) dużo lepszy dla tego środowiska (50 kroków, z random_dirt_prob=0.05) niż ModelBaseVacuumAgent oraz ReflexVacuumAgent. Opisz działanie swojego programu, na podstawie jaki przesłanek on działa, jakbyś go zmodyfikował gdyby prawdopodobieństwo zabrudzenia pokoju (random_dirt_prob) się zmieniło?\n",
     "\n",
-    "**Po 10 krokach bezczynności agent zmienia pokój oraz w przed ostatnim ruchu sprawdza pokój w którym go nie ma. Jeśli pradopodobieństwo zabrudzenia pokoju by się zmieniło, to bym zmienił czas oczekiwania odrwotnie proporcjonalnie do wartości prawdopodobieństwa zabrudzenia.**\n",
+    "**Agent czeka 9 kroków w jednym pokoju, a następnie się przemieszcza. W przed ostatnim ruchu zawsze sprawdza pokój w którym go nie ma. Liczba 9 została wybrana podczas testowania różnych wartości. W obecnej sytuacji najbardziej efektywna jest sytuacja, kiedy szansa na to, że drugi pokój jest zabrudzony wynosi około 60% ($(1-0.05)^{10}\\approx 0.6$). Jeśli pradopodobieństwo zabrudzenia pokoju by się zmieniło, to bym zmienił czas oczekiwania odrwotnie proporcjonalnie do wartości prawdopodobieństwa zabrudzenia.**\n",
     "\n",
     "Punktacja za wynik (sprawdzarka zrobi 50000 powtórzeń):\n",
     "* \\> 41: 1 pkt.\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
     "\n",
     "def MyVacuumAgent():\n",
     "    step = 0\n",
-    "    i =9\n",
+    "    i = 9\n",
     "\n",
     "    def program(percept):\n",
     "        # Zwróć jedną z dostępnych akcji: {'Suck', 'Right', 'Left', 'NoOP'}\n",
@@ -374,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function __main__.MyVacuumAgent()>, 45.00748)]"
+      "text/plain": "[(<function __main__.MyVacuumAgent()>, 45.02932)]"
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,107 +394,6 @@
     "\n",
     "compare_agents(env_factory, [MyVacuumAgent], 50000, 50)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "[(<function MyVacuumAgent at 0x7fd82079af80>, 12.3392)]\n",
-      "1\n",
-      "[(<function MyVacuumAgent at 0x7fd8292d70a0>, 33.4902)]\n",
-      "2\n",
-      "[(<function MyVacuumAgent at 0x7fd8206d52d0>, 40.07334)]\n",
-      "3\n",
-      "[(<function MyVacuumAgent at 0x7fd820559ab0>, 42.7482)]\n",
-      "4\n",
-      "[(<function MyVacuumAgent at 0x7fd820559bd0>, 44.45316)]\n",
-      "5\n",
-      "[(<function MyVacuumAgent at 0x7fd8292d70a0>, 45.08842)]\n",
-      "6\n",
-      "[(<function MyVacuumAgent at 0x7fd8205155a0>, 45.36358)]\n",
-      "7\n",
-      "[(<function MyVacuumAgent at 0x7fd82055a710>, 45.63912)]\n",
-      "8\n",
-      "[(<function MyVacuumAgent at 0x7fd820559bd0>, 45.49252)]\n",
-      "9\n",
-      "[(<function MyVacuumAgent at 0x7fd8292d75b0>, 45.59162)]\n",
-      "10\n",
-      "[(<function MyVacuumAgent at 0x7fd82079af80>, 45.15296)]\n",
-      "11\n",
-      "[(<function MyVacuumAgent at 0x7fd820559ab0>, 45.28088)]\n",
-      "12\n",
-      "[(<function MyVacuumAgent at 0x7fd82055a710>, 44.96612)]\n",
-      "13\n",
-      "[(<function MyVacuumAgent at 0x7fd82079af80>, 44.52282)]\n",
-      "14\n",
-      "[(<function MyVacuumAgent at 0x7fd8206d52d0>, 44.16324)]\n",
-      "15\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[21], line 37\u001B[0m\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21menv_factory\u001B[39m():\n\u001B[1;32m     34\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m TrivialVacuumEnvironmentWithCats(random_dirt_prob\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.05\u001B[39m)\n\u001B[0;32m---> 37\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mcompare_agents\u001B[49m\u001B[43m(\u001B[49m\u001B[43menv_factory\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mMyVacuumAgent\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m50000\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m50\u001B[39;49m\u001B[43m)\u001B[49m)\n",
-      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/zmio-BbFn6q4X-py3.10/lib/python3.10/site-packages/aima3/agents.py:944\u001B[0m, in \u001B[0;36mcompare_agents\u001B[0;34m(EnvFactory, AgentFactories, n, steps)\u001B[0m\n\u001B[1;32m    939\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompare_agents\u001B[39m(EnvFactory, AgentFactories, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m, steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m):\n\u001B[1;32m    940\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"See how well each of several agents do in n instances of an environment.\u001B[39;00m\n\u001B[1;32m    941\u001B[0m \u001B[38;5;124;03m    Pass in a factory (constructor) for environments, and several for agents.\u001B[39;00m\n\u001B[1;32m    942\u001B[0m \u001B[38;5;124;03m    Create n instances of the environment, and run each agent in copies of\u001B[39;00m\n\u001B[1;32m    943\u001B[0m \u001B[38;5;124;03m    each one for steps. Return a list of (agent, average-score) tuples.\"\"\"\u001B[39;00m\n\u001B[0;32m--> 944\u001B[0m     envs \u001B[38;5;241m=\u001B[39m [EnvFactory() \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(n)]\n\u001B[1;32m    945\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m [(A, test_agent(A, steps, copy\u001B[38;5;241m.\u001B[39mdeepcopy(envs)))\n\u001B[1;32m    946\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m A \u001B[38;5;129;01min\u001B[39;00m AgentFactories]\n",
-      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/zmio-BbFn6q4X-py3.10/lib/python3.10/site-packages/aima3/agents.py:944\u001B[0m, in \u001B[0;36m<listcomp>\u001B[0;34m(.0)\u001B[0m\n\u001B[1;32m    939\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompare_agents\u001B[39m(EnvFactory, AgentFactories, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m, steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m):\n\u001B[1;32m    940\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"See how well each of several agents do in n instances of an environment.\u001B[39;00m\n\u001B[1;32m    941\u001B[0m \u001B[38;5;124;03m    Pass in a factory (constructor) for environments, and several for agents.\u001B[39;00m\n\u001B[1;32m    942\u001B[0m \u001B[38;5;124;03m    Create n instances of the environment, and run each agent in copies of\u001B[39;00m\n\u001B[1;32m    943\u001B[0m \u001B[38;5;124;03m    each one for steps. Return a list of (agent, average-score) tuples.\"\"\"\u001B[39;00m\n\u001B[0;32m--> 944\u001B[0m     envs \u001B[38;5;241m=\u001B[39m [\u001B[43mEnvFactory\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(n)]\n\u001B[1;32m    945\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m [(A, test_agent(A, steps, copy\u001B[38;5;241m.\u001B[39mdeepcopy(envs)))\n\u001B[1;32m    946\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m A \u001B[38;5;129;01min\u001B[39;00m AgentFactories]\n",
-      "Cell \u001B[0;32mIn[21], line 34\u001B[0m, in \u001B[0;36menv_factory\u001B[0;34m()\u001B[0m\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21menv_factory\u001B[39m():\n\u001B[0;32m---> 34\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mTrivialVacuumEnvironmentWithCats\u001B[49m\u001B[43m(\u001B[49m\u001B[43mrandom_dirt_prob\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0.05\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[11], line 9\u001B[0m, in \u001B[0;36mTrivialVacuumEnvironmentWithCats.__init__\u001B[0;34m(self, random_dirt_prob, seed)\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, random_dirt_prob\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.05\u001B[39m, seed\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m      8\u001B[0m     \u001B[38;5;28msuper\u001B[39m(TrivialVacuumEnvironmentWithCats, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n\u001B[0;32m----> 9\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mrandom \u001B[38;5;241m=\u001B[39m \u001B[43mrandom\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mRandom\u001B[49m\u001B[43m(\u001B[49m\u001B[43mseed\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     10\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mrandom_dirt_prob \u001B[38;5;241m=\u001B[39m random_dirt_prob\n",
-      "File \u001B[0;32m/usr/lib/python3.10/random.py:119\u001B[0m, in \u001B[0;36mRandom.__init__\u001B[0;34m(self, x)\u001B[0m\n\u001B[1;32m    104\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Random number generator base class used by bound module functions.\u001B[39;00m\n\u001B[1;32m    105\u001B[0m \n\u001B[1;32m    106\u001B[0m \u001B[38;5;124;03mUsed to instantiate instances of Random to get generators that don't\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    114\u001B[0m \n\u001B[1;32m    115\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    117\u001B[0m VERSION \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m3\u001B[39m     \u001B[38;5;66;03m# used by getstate/setstate\u001B[39;00m\n\u001B[0;32m--> 119\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, x\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m    120\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Initialize an instance.\u001B[39;00m\n\u001B[1;32m    121\u001B[0m \n\u001B[1;32m    122\u001B[0m \u001B[38;5;124;03m    Optional argument x controls seeding, as for Random.seed().\u001B[39;00m\n\u001B[1;32m    123\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m    125\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mseed(x)\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "def calculate_chance(times_uncleared):\n",
-    "    return 0.95**times_uncleared\n",
-    "\n",
-    "for val in range(20):\n",
-    "    print(val)\n",
-    "\n",
-    "    def MyVacuumAgent():\n",
-    "        step = 0\n",
-    "        i = val\n",
-    "\n",
-    "        def program(percept):\n",
-    "            # Zwróć jedną z dostępnych akcji: {'Suck', 'Right', 'Left', 'NoOP'}\n",
-    "            nonlocal i, step\n",
-    "            step += 1\n",
-    "            location, status = percept\n",
-    "            if status == 'Dirty':\n",
-    "                return 'Suck'\n",
-    "            elif step == 49:\n",
-    "                return 'Right' if location == loc_A else 'Left'\n",
-    "            elif location == loc_A and i == 0:\n",
-    "                i = val\n",
-    "                return 'Right'\n",
-    "            elif location == loc_B and i == 0:\n",
-    "                i = val\n",
-    "                return 'Left'\n",
-    "            else:\n",
-    "                i -= 1\n",
-    "                return 'NoOP'\n",
-    "\n",
-    "        return Agent(program)\n",
-    "\n",
-    "\n",
-    "    def env_factory():\n",
-    "        return TrivialVacuumEnvironmentWithCats(random_dirt_prob=0.05)\n",
-    "\n",
-    "\n",
-    "    print(compare_agents(env_factory, [MyVacuumAgent], 50000, 50))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
   }
  ],
  "metadata": {
